--- a/roles/nginx/tasks/configure_nginx.yml
+++ b/roles/nginx/tasks/configure_nginx.yml
@@ -3,6 +3,10 @@
     src: mysite.j2
     dest: /etc/nginx/sites-enabled/mysite
   notify: restart nginx
+  tags: 
+    - configuration
 
 - name: Remove default config
   file: path=/etc/nginx/sites-enabled/default state=absent
+  tags: 
+    - configuration
