--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
 # tasks file for roles/nginx
-- include_tasks: install_packages.yml
-- include_tasks: configure_nginx.yml
+- import_tasks: install_packages.yml
+- import_tasks: configure_nginx.yml
