--- a/playbook1.yml
+++ b/playbook1.yml
@@ -1,9 +1,5 @@
 - hosts: webservers
   become: yes
-  vars:
-    http_port: 8000
-    https_port: 4443
-    html_welcome_msg: "Hello from Ansible"
   roles:
     - common
     - apache2
@@ -18,3 +14,10 @@
     - nginx
   tags:
     - proxy
+
+- hosts: database
+  become: yes
+  roles:
+    - common
+  tags:
+    - db
