tailor yaml files header

--- a/roles/common/tasks/system_configuration.yml
+++ b/roles/common/tasks/system_configuration.yml
@@ -1,3 +1,4 @@
+---
 - name: "copy hosts file"
-  template: src=hosts.j2 dest=/etc/hosts
+  template: src=hosts_file.j2 dest=/etc/hosts
   tags: always
