debuging ansible_facts - proxy tag still not working properly

--- a/playbook1.yml
+++ b/playbook1.yml
@@ -1,6 +1,7 @@
 ---
 - hosts: webservers
   become: yes
+  gather_facts: yes
   roles:
     - common
     - apache2
@@ -10,6 +11,7 @@
 
 - hosts: myproxy
   become: yes
+  gather_facts: yes
   roles:
     - common
     - nginx
