inject fact gathering to ensure tags play for proxy

--- a/playbook1.yml
+++ b/playbook1.yml
@@ -8,6 +8,15 @@
   tags:
     - web
 
+#inject gather facts to force the playbook to gather facts
+- hosts: all
+  gather_facts: true
+  become: true
+  # tasks : 
+  #   - name: gather facts
+  #     command: date
+  tags:
+    - always
 
 - hosts: myproxy
   become: yes
