--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
 # tasks file for roles/nginx
+- import_tasks: gather_facts_web.yml
 - import_tasks: install_packages.yml
 - import_tasks: configure_nginx.yml
